[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sammy-web"  # <<< PICK A UNIQUE NAME
version = "0.1.3.2"
authors = [
    { name = "Sanyam Asthana", email = "sanyam.asthana@gmail.com" },
]
description = "Sammy is a CLI tool for web reconnaissance and security testing"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]

# --- This is where you list your dependencies ---
dependencies = [
    "requests",
    "tqdm"
]

keywords = [
    "web-reconnaissance",
    "security-testing",
    "penetration-testing",
    "directory-bruteforce",
    "web-crawler",
    "http-headers",
    "cybersecurity",
    "infosec",
    "ctf-tools",
    "bug-bounty",
    "recon",
    "enumeration",
    "web-scanner",
    "osint",
    "red-team"
]

# --- This is the magic part ---
# It tells pip to create a command 'sammy'
# that runs the 'main' function from your 'sammy/main.py' file
[project.scripts]
sammy = "sammy.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
sammy = ["*.txt"]
